--- a/InventarioWebUtp/src/main/resources/templates/equipos/tiposYdominios.html
+++ b/InventarioWebUtp/src/main/resources/templates/equipos/tiposYdominios.html
@@ -88,7 +88,7 @@
 					aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">Movimientos:</h6>
-						<a class="collapse-item" href="">Usuarios</a> <a
+						<a class="collapse-item" href="movimientos/usuario">Usuarios</a> <a
 							class="collapse-item" href="">Dispositivos</a> <a
 							class="collapse-item" href="">Componentes</a>
 					</div>
