--- a/InventarioWebUtp/src/main/resources/templates/software/proveedores.html
+++ b/InventarioWebUtp/src/main/resources/templates/software/proveedores.html
@@ -77,7 +77,7 @@
             <div class="bg-white py-2 collapse-inner rounded">
               <h6 class="collapse-header">Equipos:</h6>
               <a class="collapse-item" href="/equipos/tipos">Tipos & Dominios</a>
-              <a class="collapse-item" href="#">SO/Antivirus y otros</a>
+              <a class="collapse-item" href="/equipos/antivirusYSo">SO/Antivirus y otros</a>
               <a class="collapse-item" href="/equipos/dispositivos">Dispositivos</a>
               <a class="collapse-item" href="#">Componentes</a>
             </div>
